# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import divisionsRouter from "./divisions";
+import homepageRouter from "./homepage";
+import messagesRouter from "./messages";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(divisionsRouter);
+router.use(homepageRouter);
+router.use(messagesRouter);
+router.use(adminRouter);
 
 export default router;
